tried to fix chart.css spacing but lasciato cosi

--- a/SpotsApp_Web/web/styles/chart.css
+++ b/SpotsApp_Web/web/styles/chart.css
@@ -19,6 +19,10 @@ dt {
   margin-bottom: 20px;
   margin-left: 130px;
 }
+
+dd{
+	padding:10px;
+}
 .text {
   font-weight: 600;
   display: flex;
